# RetroHydra

./: .gitignore  .npmrc  CHANGELOG.md  README.md  catalog.nova.json  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: pages.yml  release-windows.yml
assets/emulator-configs/: duckstation-template.ini  rpcs3-template.yml  yuzu-template.ini
docs/: mvp-windows-install.md  release-checklist.md  repository-authoring.md  source-library-template.md
examples/repositories/: showcase.metadata.json
public/: demo-repository.json
scripts/: build-source-template-pages.mjs  build-source-template-pages.node-test.mjs  mvp-package-smoke.mjs  mvp-release-windows.mjs  mvp-smoke.mjs  mvp-visual.mjs  settings-performance.node-test.mjs  static-check.mjs  tauri-build-vs.cmd  validate-source-library.mjs  validate-source-library.node-test.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/profiles/: emulators.json
src-tauri/src/: commands.rs  downloads.rs  emulator_profiles.rs  emulator_setup.rs  game_files.rs  github_resolver.rs  launcher.rs  lib.rs  logging.rs  main.rs  orchestrator.rs  platform.rs  schema.rs  security.rs  setup_profiles.rs  storage.rs  torrent.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Dashboard.tsx  GameDetailsModal.tsx  InstallProgressOverlay.tsx  OnboardingWizard.tsx  SettingsModal.tsx  WelcomeScreen.tsx
src/lib/: api.ts  downloadActions.node-test.ts  downloadActions.ts  focusManager.node-test.ts  focusManager.ts  launchErrors.ts  (+11 more)
(+15 files in other folders)
