[package]
name = "retrohydra"
version = "0.1.0"
description = "RetroHydra BYOR desktop content aggregator"
authors = ["RetroHydra"]
edition = "2021"

[lib]
name = "retrohydra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["fs", "process"] }
url = "2"

[dev-dependencies]
tempfile = "3"
